After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727894 - liveadder: fix minor memory leak in caps query handler
liveadder: fix minor memory leak in caps query handler
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-09 13:14 UTC by sancane
Modified: 2014-04-10 00:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (798 bytes, patch)
2014-04-09 13:15 UTC, sancane
committed Details | Review

Description sancane 2014-04-09 13:14:12 UTC
Caps are not being unrefing after usage. This patch can also be applied to 1.2.3, 1.2.2 an so on.
Comment 1 sancane 2014-04-09 13:15:05 UTC
Created attachment 273892 [details] [review]
patch
Comment 2 Tim-Philipp Müller 2014-04-10 00:26:10 UTC
Thanks, pushed to master (we'll cherry-pick it into 1.2 in due course):

 commit 7d97a4b20b194dd83f01be04cd2e7093da944fa3
 Author: Santiago Carot-Nemesio <sancane@gmail.com>
 Date:   Wed Apr 9 15:07:19 2014 +0200

    liveadder: fix memory leak querying sink caps
    
    https://bugzilla.gnome.org/show_bug.cgi?id=727894