liveadder: fix memory leak querying sink caps

https://bugzilla.gnome.org/show_bug.cgi?id=727894